--- a/SmallCrm.csproj
+++ b/SmallCrm.csproj
@@ -55,16 +55,21 @@
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Options\AddCustomerOptions.cs" />
     <Compile Include="Model\Options\AddProductOptions.cs" />
+    <Compile Include="Model\Options\CreateOrderOptions.cs" />
     <Compile Include="Model\Options\SearchCustomerOptions.cs" />
     <Compile Include="Model\Options\UpdateCustomerOptions.cs" />
+    <Compile Include="Model\Options\UpdateOrderOptions.cs" />
     <Compile Include="Model\Options\UpdateProductOptions.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\ProductCategory.cs" />
+    <Compile Include="Model\Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\ICustomerService.cs" />
+    <Compile Include="Services\IOrderService.cs" />
     <Compile Include="Services\IProductService.cs" />
+    <Compile Include="Services\OrderService.cs" />
     <Compile Include="Services\ProductService.cs" />
   </ItemGroup>
   <ItemGroup>
