--- a/SmallCrmConsole/SmallCrmConsole.csproj
+++ b/SmallCrmConsole/SmallCrmConsole.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ISO3166" Version="1.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SmallCrm.Core\SmallCrm.Core.csproj" />
   </ItemGroup>
 
