--- a/SmallCrm.Web/SmallCrm.Web.csproj
+++ b/SmallCrm.Web/SmallCrm.Web.csproj
@@ -14,7 +14,11 @@
   <ItemGroup>
     <ProjectReference Include="..\SmallCrm.Core\SmallCrm.Core.csproj" />
   </ItemGroup>
-
-
+  
+  <ItemGroup>
+    <!-- extends watching group to include *.js files -->
+    <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*" />
+    <Watch Include="**\*.cshtml" />
+  </ItemGroup>
 
 </Project>
